# dsba-wshp06

./: README.md
streams/src/: CMakeLists.txt
streams/src/ex1_avgfunc/: main.cpp
streams/src/ex2_read_from_stream/: main.cpp
streams/src/ex3_files/: inp.txt  main.cpp  outp.txt
